@@ -38,5 +38,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
+    implementation 'com.github.javiersantos:MaterialStyledDialogs:3.0.1'
+    implementation 'com.eightbitlab:blurview:1.6.3'
 }
 apply plugin: 'com.google.gms.google-services'
