@@ -1,0 +1,74 @@
+package com.example.worldquiz.Adapter;
+
+import android.content.Context;
+
+import android.view.LayoutInflater;
+import android.view.View;
+import android.view.ViewGroup;
+
+import android.widget.TextView;
+import android.widget.Toast;
+
+import androidx.annotation.NonNull;
+import androidx.cardview.widget.CardView;
+import androidx.recyclerview.widget.RecyclerView;
+
+import com.example.worldquiz.Model.Category;
+import com.example.worldquiz.R;
+
+import java.util.List;
+
+
+
+public class CategoryAdapter extends RecyclerView.Adapter<CategoryAdapter.MyViewHolder> {
+
+    Context context;
+    List<Category> categories;
+
+
+    public CategoryAdapter(Context context, List<Category> categories) {
+        this.context = context;
+        this.categories = categories;
+    }
+
+
+    @NonNull
+    @Override
+    public MyViewHolder onCreateViewHolder(@NonNull ViewGroup parent, int viewType) {
+
+        View itemView = LayoutInflater.from(context).inflate(R.layout.layout_category_item,parent,false);
+
+
+        return new MyViewHolder(itemView);
+    }
+
+
+    @Override
+    public void onBindViewHolder(@NonNull MyViewHolder holder, int position) {
+        holder.txt_category_name.setText(categories.get(position).getName());
+    }
+
+    @Override
+    public int getItemCount() {
+        return categories.size();
+    }
+
+    public class MyViewHolder extends RecyclerView.ViewHolder {
+
+        CardView card_category;
+        TextView txt_category_name;
+
+        public MyViewHolder(@NonNull View itemView) {
+            super(itemView);
+            card_category = (CardView) itemView.findViewById(R.id.card_category);
+            txt_category_name = (TextView) itemView.findViewById(R.id.txt_category_name);
+            card_category.setOnClickListener(new View.OnClickListener() {
+                @Override
+                public void onClick(View v) {
+                    Toast.makeText(context, "Click at category "+ categories.get(getAdapterPosition()).getName(),Toast.LENGTH_SHORT).show();
+
+                }
+            });
+        }
+    }
+}
