@@ -20,6 +20,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {url 'https://jitpack.io'}
         
     }
 }
