@@ -11,6 +11,13 @@ SIT305 Assignment 2 - World Quiz
 - Improving the Sign-up dialog: adding progress bar and field requirements. 
 
 26/05/2020
-- Singing up use email and password for users' identities (Firebase sign up method). User still need usernaem for more convenience in logging in.
+- Singing up use email and password for users' identities (Firebase sign up method). User still need username for more convenience in logging in.
 - User type the username and the database will check if the related email is sign up or not. 
 - Eliminate storing password on the firebase database for user's privacy.
+
+27/05/2020
+- Adding database to the app (EDMTQuiz2019.db) including categories and questions for each categories and building DBHelper for calling out all the categories in the database
+- Designing and decorating layout for category item.
+- Building Category Adapter for the Category list
+
+
